# gpp-client

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  aliases.json  download_schema.py  model.py  noxfile.py  pyproject.toml  schema.graphql
.github/: dependabot.yaml  pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: default.md  release.md
.github/workflows/: check_codegen.yaml  check_schema.yaml  check_schema_ci.yaml  check_schema_development.yaml  check_schema_production.yaml  check_schema_reusable.yaml  create_release.yaml  publish.yaml  python-publish.yml  run_tests.yaml
docs/source/: cli.rst  client.rst  conf.py  config.rst  configuration.rst  contributing.rst  credentials.rst  developer.rst  environment.rst  exceptions.rst  getting-started.rst  index.rst  quickstart.rst  rest-client.rst
docs/source/api/: custom-fields.rst  custom-mutations.rst  custom-queries.rst  custom_fields.rst  custom_mutations.rst  custom_queries.rst  enums.rst  index.rst  input-types.rst  input_types.rst
docs/source/cli/: attachment.rst  call-for-proposals.rst  call_for_proposals.rst  config.rst  configuration-request.rst  goats.rst  index.rst  observation.rst  program-note.rst  program.rst  scheduler.rst  site-status.rst  site_status.rst  target.rst  workflow-state.rst
docs/source/configuration/: config.rst  defaults.rst  environment.rst  index.rst  models.rst
docs/source/developer/: architecture.rst  codegen.rst  contributing.rst  documentation.rst  pull-requests.rst  releases.rst  schema.rst  setup.rst  workflow.rst
docs/source/director/: base_director.rst  goats.rst  index.rst  scheduler.rst
docs/source/domains/: atom.rst  attachment.rst  goats.rst  index.rst  observation.rst  program.rst  scheduler.rst  site-status.rst  target.rst  workflow-state.rst
docs/source/graphql-api/: client.rst  custom-mutations.rst  custom-queries.rst  enums.rst  index.rst  input-types.rst  operation-builder.rst  result-models.rst  transport-client.rst
docs/source/managers/: attachment.rst  base.rst  base_manager.rst  call_for_proposals.rst  configuration-request.rst  group.rst  index.rst  observation.rst  program.rst  program_note.rst  site-status.rst  target.rst  workflow-state.rst
docs/source/mixins/: create.rst  delete.rst  get.rst  index.rst  restore.rst  update.rst
docs/source/orchestration/: coordinator.rst  director.rst  index.rst  scheduler.rst
examples/: example.ipynb
gpp_client/: client.py  fragments.py  utils.py
gpp_client/cli/: cli.py  utils.py
gpp_client/cli/commands/: call_for_proposals.py  config.py  program.py  program_note.py
gpp_client/managers/: base_manager.py  utils.py
gpp_client/managers/call_for_proposals/: __init__.py  manager.py  queries.py
gpp_client/managers/observation/: __init__.py  manager.py  queries.py
gpp_client/managers/program/: __init__.py  manager.py  queries.py
gpp_client/managers/program_note/: manager.py
gpp_client/mixins/: __init__.py  create.py  delete.py  get.py  restore.py  update.py  utils.py
gpp_client/schema/: enums.py
graphql/: README.md
graphql/codegen/: development.toml  production.toml
graphql/development/: ariadne-codegen.toml  schema.graphql
graphql/development/domains/: fragments.graphql
graphql/operations/: development_only.graphql
graphql/production/: ariadne-codegen.toml  schema.graphql
graphql/schemas/: development.graphql  development.toml  production.graphql  production.toml
queries/: program_note.graphql
schemas/: development.schema.graphql  production.schema.graphql
scripts/: check_release.py  compare_schemas.py  download_schema.py  run_codegen.py  validate_release.py
src/custom_plugins/: fix_custom_fields_literal.py
src/directors/: base_director.py
src/directors/scheduler/: __init__.py  program.py
src/gpp_client/: __init__.py  client.py  constants.py  director.py  environment.py  exceptions.py  logging_utils.py  rest.py  settings.py  urls.py
src/gpp_client/api/: __init__.py  _client.py  async_base_client.py  base_operation.py  create_program_note.py  custom_fields.py  custom_mutations.py  custom_queries.py  custom_typing_fields.py  enums.py  fragments.py  get_all_program_notes.py  get_goats_observations.py  get_goats_programs.py  get_program_note.py  get_scheduler_all_programs_id.py  get_scheduler_programs.py  input_types.py  model.py  new_observation_edit.py  new_observation_in_program.py  obs_calculation_update.py  observation_edit.py  update_program_notes.py
src/gpp_client/cli/: cli.py  output.py  utils.py
src/gpp_client/client/: client.py
src/gpp_client/config/: config.py
src/gpp_client/constants/: __init__.py  constants.py
src/gpp_client/coordinator/: base.py
src/gpp_client/credentials/: credential_resolver.py
src/gpp_client/directors/: base.py  base_director.py  director.py
src/gpp_client/domains/: __init__.py  atom.py  attachment.py  base.py  goats.py  observation.py  program.py  scheduler.py  site_status.py  target.py  workflow_state.py
src/gpp_client/managers/: atom.py  attachment.py  base.py  base_manager.py  call_for_proposals.py  configuration_request.py  group.py  observation.py  program.py  program_note.py  site_status.py  target.py  utils.py  workflow_state.py
src/gpp_client/patches/: patches.py
src/gpp_client/rest/: __init__.py  client.py  models.py  utils.py
src/gpp_client/subscribers/: __init__.py  observation.py  program.py  target.py
src/queries/: goats.graphql  scheduler.graphql  subscriptions.graphql
tests/: conftest.py  test_client.py
tests/cli/: conftest.py  test_cli.py  test_utils.py
tests/cli/commands/: test_call_for_proposals.py  test_program.py  test_program_note.py
tests/custom_plugins/: test_alias_str_wrapper.py  test_fix_custom_fields_literal.py
tests/data/: schema.graphql
tests/gpp_client/: test_client.py
tests/managers/: test_base_manager.py
tests/mixins/: conftest.py  test_create.py  test_delete.py  test_get.py  test_restore.py  test_update.py  test_utils.py
tests/scripts/: test_download_schema.py  test_run_codegen.py  test_validate_release.py
(+106 files in other folders)
