[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gpp_client"
description = "Gemini Program Platform client."
readme = "README.md"
authors = [{ name = "NOIRLab" }]
requires-python = ">=3.10.0"
dependencies = [
    "astropy>=5.3.4",
    "toml>=0.10.2",
    "typer>=0.15.2",
    "ariadne-codegen[subscriptions]>=0.14.0"
]
version = "0.0.0"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-xdist",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-remotedata",
    "pytest-mock",
    "ruff",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autobuild",
    "furo",
    "sphinxcontrib-typer",
]

[project.scripts]
gpp = "gpp_client.cli.cli:main"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
testpaths = ["tests"]
# addopts = "-r A -v -n auto --cov=src --cov-report=term --cov=tests --cov-branch"
addopts = ["--import-mode=importlib", "-rs"]
asyncio_default_fixture_loop_scope = "session"

[tool.ariadne-codegen]
schema_path = "schema.graphql"
client_name = "_GPPClient"
client_file_name = "_client"
enable_custom_operations = true
target_package_name = "generated"
target_package_path = "src/gpp_client"
convert_to_snake_case = true
plugins = [
    "custom_plugins.AliasStrWrapperPlugin",
]
