[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gpp-client"
description = "Gemini Program Platform client."
readme = "README.md"
authors = [{ name = "NOIRLab" }]
license = { file = "LICENSE" }
requires-python = ">=3.10.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "toml>=0.10.2",
    "typer>=0.15.3",
    "click>=8.0.0,<8.2.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.0,<3",
    "graphql-core>=3.2.0,<3.4",
    "beautifulsoup4>=4.13,<5",
    "websockets>=14.2",
]
version = "25.05.0a1"
keywords = ["gemini", "gpp", "client", "program", "platform"]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-xdist",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-remotedata",
    "pytest-mock",
    "ruff",
    "ariadne-codegen>=0.15.0.dev1",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autobuild",
    "furo",
    "sphinxcontrib-typer",
]
codegen = ["ariadne-codegen>=0.15.0.dev1"]

[project.scripts]
gpp = "gpp_client.cli.cli:main"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff]
# Ignore generated code.
extend-exclude = ["api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# addopts = "-r A -v -n auto --cov=src --cov-report=term --cov=tests --cov-branch"
addopts = ["--import-mode=importlib", "-rs"]
asyncio_default_fixture_loop_scope = "session"

[tool.ariadne-codegen]
schema_path = "schema.graphql"
client_name = "_GPPClient"
client_file_name = "_client"
enable_custom_operations = true
target_package_name = "api"
target_package_path = "src/gpp_client"
convert_to_snake_case = true
plugins = [
    "custom_plugins.AliasStrWrapperPlugin",
    "custom_plugins.FixCustomFieldsLiteralPlugin",
]
queries_path = "queries/"

[tool.ariadne-codegen.scalars.ProgramNoteId]
type = "str"

[tool.ariadne-codegen.scalars.NonEmptyString]
type = "str"

[tool.ariadne-codegen.scalars.ProgramId]
type = "str"

[tool.datamodel-codegen]
input = "schema.graphql"
output = "model.py"
input-file-type = "graphql"
output-model-type = "pydantic_v2.BaseModel"
snake-case-field = true
use-standard-collections = true
force-optional = true
use-field-description = true
target-python-version = "3.10"
formatters = ["ruff-format", "ruff-check"]
capitalize-enum-members = true
use-subclass-enum = true
use-annotated = true
use-schema-description = true
reuse-model = false
aliases = "aliases.json"
keep-model-order = true

[project.urls]
Homepage = "https://github.com/gemini-hlsw/gpp-client"
Source = "https://github.com/gemini-hlsw/gpp-client"
Issues = "https://github.com/gemini-hlsw/gpp-client/issues"
Documentation = "https://gpp-client.readthedocs.io/en/latest/"
